update bug on login and add swagger on master data
